[project]
name = "cyber_wc"
version = "0.1.0"
description = "Interactive web application showcasing historical photographs and locations in Hong Kong"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Darren Weng", email = "wjhdarren@gmail.com" }]
dependencies = [
    # Core web framework
    "dash~=2.18.1",
    "flask~=2.2.5",

    # UI components
    "dash-bootstrap-components==1.4.2",
    "dash-table==5.0.0",

    # Data processing and visualization
    "pandas~=2.2.3",
    "geopandas==0.14.3",
    "plotly~=5.24.1",
    "numpy~=2.0.2",

    # Geospatial data handling
    "fiona==1.9.6",
    "shapely==2.0.7",

    # Text processing and matching
    "fuzzywuzzy~=0.18.0",
    "python-levenshtein~=0.25.1",
    "unidecode~=1.3.8",
    "markdown~=3.5",

    # HTTP client and caching
    "httpx==0.26.0",
    "flask-caching~=2.3.0",

    # Production server
    "gunicorn==23.0.0",

    # Environment variables
    "python-dotenv==1.0.1",

    # AI integration (for future features)
    "openai==1.47.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "ruff>=0.14.1",
]
